fix search box height on mobile

--- a/src/app/page/search-page/search-page/search-page.component.scss
+++ b/src/app/page/search-page/search-page/search-page.component.scss
@@ -83,6 +83,7 @@
         width: 90%;
         font-size: var(--small-font-size);
         padding-left: 34px;
+        height: 36px;
       }
       .search-icon {
         margin-top: 11px;
